--- a/package.json
+++ b/package.json
@@ -1,18 +1,41 @@
 {
   "name": "nodesample",
   "version": "1.0.0",
-  "description": "A sample Koa app",
+  "description": "A simple Koa app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "pretty": "prettier --write '**/*.js'",
+    "start": "nodemon --inspect=0.0.0.0:9229 app.js"
   },
   "author": "Tin Truong <truongtrongtin0305@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "koa": "^2.7.0"
+    "@sendgrid/mail": "^6.3.1",
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.6",
+    "date-fns": "^1.30.1",
+    "dotenv": "^7.0.0",
+    "fs-extra": "^7.0.1",
+    "ioredis": "^4.9.0",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "kcors": "^2.2.2",
+    "knex": "^0.16.5",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-ratelimit": "^4.2.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa-useragent": "^1.2.1",
+    "log4js": "^4.1.0",
+    "pg": "^7.9.0",
+    "randexp": "^0.5.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "faker": "^4.1.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.18.11",
+    "prettier": "^1.17.0"
   }
 }
