--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
-version: "3"
+version: "3.7"
 services:
+  db:
+    image: postgres:11.2-alpine
+    volumes:
+      - postgres:/var/lib/postgresql/data
+
+  redis:
+    image: redis:5.0.4-alpine
+    volumes:
+      - redis:/data
+
   app:
     build: .
     ports:
       - "3000:3000"
+      - "9229:9229"
     volumes:
       - .:/nodesample
-      - /nodesample/node_modules
+      - node_modules:/nodesample/node_modules
     depends_on:
       - db
-  db:
-    image: postgres:11.2-alpine
-    ports:
-      - "27017:27017"
-    volumes:
-      - postgres:/var/lib/postgresql/data
+      - redis
+
 volumes:
+  node_modules:
   postgres:
+  redis:
