--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "randexp": "^0.5.3"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "faker": "^4.1.0",
     "mocha": "^6.1.3",
     "nodemon": "^1.18.11",
