--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ APP_URL = https://koa-vue-notes-web.innermonkdesign.com
 DB_HOST = 127.0.0.1
 DB_PORT = 3306
 DB_USER = root
-DB_PASSWORD = docker
-DB_DATABASE = koa_vue_notes
+DB_PASSWORD = password
+DB_DATABASE = vue
 
 NODE_ENV = development
 PORT = 3000
