--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pretty": "prettier --write '**/*.js'",
-    "start": "nodemon --inspect=0.0.0.0:9229 app.js"
+    "pretty": "prettier --write '/src/**/*.js'",
+    "start": "nodemon --inspect=0.0.0.0:9229 src/server.js"
   },
   "author": "Tin Truong <truongtrongtin0305@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
-    "axios": "^0.18.0",
+    "@sendgrid/mail": "^6.4.0",
+    "axios": "^0.18.1",
     "bcrypt": "^3.0.6",
     "date-fns": "^1.30.1",
     "dotenv": "^7.0.0",
     "fs-extra": "^7.0.1",
-    "ioredis": "^4.9.0",
+    "ioredis": "^4.11.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "kcors": "^2.2.2",
@@ -28,14 +28,14 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-useragent": "^1.2.1",
-    "log4js": "^4.1.0",
-    "pg": "^7.9.0",
+    "log4js": "^4.5.1",
+    "pg": "^7.11.0",
     "randexp": "^0.5.3"
   },
   "devDependencies": {
     "faker": "^4.1.0",
-    "mocha": "^6.1.4",
-    "nodemon": "^1.18.11",
-    "prettier": "^1.17.0"
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2"
   }
 }
