--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   db:
-    image: postgres:11.4-alpine
+    image: postgres:alpine
     volumes:
       - postgres:/var/lib/postgresql/data
 
